# ultimate_fullstack

./: .gitignore  LICENSE  README.md  UltimateApp.sln
.cursor/history/: cursor_project_architecture_and_technol.md
UltimateApp.ApiService/: UltimateApp.ApiService.csproj
UltimateApp.ApiService/Properties/: launchSettings.json
UltimateApp.AppHost/: AppHost.cs  UltimateApp.AppHost.csproj
UltimateApp.AppHost/Properties/: launchSettings.json
UltimateApp.Python/: .cursorrules  pyproject.toml  ruff.toml
UltimateApp.Python/src/: host.py  main.py
UltimateApp.Python/src/api/: __init__.py
UltimateApp.Python/src/api/routers/: __init__.py
UltimateApp.Python/src/api/routers/v1/: __init__.py  health.py
UltimateApp.Python/src/shared/utils/module/: __init__.py
UltimateApp.Python/src/ultimateapp/: main.py
UltimateApp.Tests/: UltimateApp.Tests.csproj  WebTests.cs
UltimateApp.Web/: Program.cs  UltimateApp.Web.csproj  WeatherApiClient.cs  package-lock.json
UltimateApp.Web/Components/: App.razor  _Imports.razor
UltimateApp.Web/Components/Layout/: NavMenu.razor
UltimateApp.Web/Properties/: launchSettings.json
UltimateApp.WebApp/: package-lock.json  package.json  vite.config.ts
docs/: technology_stack.md
