[project]
name = "ultimateapp-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "ty>=0.0.1a17",
    "pytest>=8.3",
    "pytest-ty>=0.1.0",
    "httpx>=0.28.1",
]
test = []

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--ty -q"

# Ruff: linter and formatter configuration
# Docs: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
# Treat `src/` as the import root for first-party modules
src = ["src"]
# Match your declared Python range
target-version = "py312"

[tool.ruff.lint]
# Start from Ruff defaults (E4,E7,E9,F) and extend with useful, low-noise rule sets
extend-select = [
    "B",    # flake8-bugbear: common bugs and design issues
    "I",    # isort: import sorting
    "UP",   # pyupgrade: modernize syntax for current Python
    "ISC",  # implicit string concatenation
    "RUF",  # Ruff-specific rules
]
# Defer line length to the formatter rather than the linter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Allow re-export patterns in package initializers
"**/__init__.py" = ["F401", "F403"]

[tool.ruff.format]
# Keep defaults similar to Black; explicitly set for clarity
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
root = ["src"]