[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ultimateapp"
version = "0.1.0"
description = "Scalable FastAPI backend for AI applications"
readme = "README.md"
requires-python = ">=3.12.0,<3.13.0"
authors = [{ name = "Oleksii Filonenko", email = "filonenkoalexy@gmail.com" }]
keywords = []
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
serve = "main:start"
lint = "ultimateapp.cli:run_lint"
typecheck = "ultimateapp.cli:run_typecheck"
test = "ultimateapp.cli:run_tests"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-ty>=0.1.2",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.ruff]
extend = "ruff.toml"

[tool.ty.environment]
root = ["src"]
